--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       min-height: 100vh;
-      background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%);
+      background: #f7f8fa;
       font-family: 'Noto Sans SC', 'Montserrat', Arial, sans-serif;
       color: #222;
       display: flex;
@@ -17,7 +17,7 @@
       justify-content: center;
     }
     .container {
-      background: #fff;
+      background: linear-gradient(135deg, #77fbb7e5 0%, #b7eaff 100%);
       border-radius: 24px;
       box-shadow: 0 8px 32px rgba(60,60,120,0.18);
       max-width: 540px;
@@ -72,11 +72,19 @@
       padding: 18px 16px 14px 16px;
       margin-bottom: 12px;
     }
+    .skills-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 16px 12px;
+      margin-bottom: 18px;
+      justify-content: center;
+    }
     .data-list {
       display: flex;
       flex-wrap: wrap;
       gap: 18px 12px;
       margin-top: 8px;
+      justify-content: center;
     }
     .data-item {
       background: #e9e6fd;
@@ -101,13 +109,56 @@
     }
     @media (max-width: 600px) {
       .container {
-        padding: 18px 4vw 18px 4vw;
+        padding: 10px 2vw 16px 2vw;
+        max-width: 100vw;
+        margin: 0;
+        border-radius: 0;
+        box-shadow: none;
       }
       h1 {
-        font-size: 1.3rem;
+        font-size: 1.1rem;
+        gap: 6px;
+      }
+      .subtitle {
+        font-size: 0.95rem;
       }
       .section-title {
-        font-size: 1rem;
+        font-size: 0.98rem;
+        gap: 4px;
+      }
+      .card {
+        padding: 12px 6px 10px 6px;
+        margin-bottom: 8px;
+        border-radius: 8px;
+      }
+      .skills-list {
+        gap: 8px 4px;
+      }
+      .data-list {
+        gap: 10px 6px;
+      }
+      .data-item {
+        font-size: 0.92rem;
+        padding: 6px 8px;
+        border-radius: 6px;
+      }
+      .quote {
+        font-size: 0.98rem;
+        padding: 8px 8px;
+        border-radius: 6px;
+      }
+      video, img {
+        max-width: 98vw !important;
+        height: auto !important;
+      }
+      #mediaModal img {
+        max-width: 95vw !important;
+        max-height: 60vh !important;
+      }
+      [style*="display:flex;"] {
+        flex-direction: column !important;
+        align-items: stretch !important;
+        gap: 8px !important;
       }
     }
   </style>
@@ -174,7 +225,8 @@
 
     <div class="section">
       <div class="section-title">💡 我的技能</div>
-      <div style="display:flex; flex-wrap:wrap; gap:16px 12px; margin-bottom:18px;">
+      <p></p>
+      <div class="skills-list">
         <div style="background:#e0f7fa; color:#00796b; border-radius:10px; padding:14px 18px; min-width:110px; font-weight:600; box-shadow:0 2px 8px rgba(0,150,136,0.07); display:flex; align-items:center; gap:8px;">
           <a href="https://mp.weixin.qq.com/s/U5tSkBSeCZLnWc7RmeS66A" target="_blank" style="color:inherit; text-decoration:none; display:flex; align-items:center; gap:8px;">🛠️ 公众号排版</a>
         </div>
@@ -198,6 +250,7 @@
 
     <div class="section">
       <div class="section-title">📊 我的领导力数据</div>
+      <p></p>
       <div class="data-list">
         <div class="data-item">🏆 带队获奖率：90%+</div>
         <div class="data-item">⏱️ 平均效率提升：30%+</div>
