--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
       padding: 18px 16px 14px 16px;
       margin-bottom: 12px;
     }
+    .card img, .card video {
+      max-width: 100%;
+      width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+      box-sizing: border-box;
+    }
     .skills-list {
       display: flex;
       flex-wrap: wrap;
@@ -107,6 +115,12 @@
       margin-top: 10px;
       font-size: 1.08rem;
     }
+    img, video {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
     @media (max-width: 600px) {
       .container {
         padding: 10px 2vw 16px 2vw;
@@ -131,6 +145,14 @@
         margin-bottom: 8px;
         border-radius: 8px;
       }
+      .card img, .card video {
+        max-width: 98vw !important;
+        width: 100% !important;
+        height: auto !important;
+        display: block;
+        margin: 0 auto;
+        box-sizing: border-box;
+      }
       .skills-list {
         gap: 8px 4px;
       }
@@ -147,9 +169,11 @@
         padding: 8px 8px;
         border-radius: 6px;
       }
-      video, img {
+      img, video {
         max-width: 98vw !important;
         height: auto !important;
+        display: block;
+        margin: 0 auto;
       }
       #mediaModal img {
         max-width: 95vw !important;
