--- a/index.html
+++ b/index.html
@@ -202,8 +202,9 @@
       <div class="card">
         <b>「合理分工 × 高效沟通 × 目标导向」</b><br>
         <ul>
-          <li>让4人团队提前夺冠的手工达人</li>
-          <li>带领2人队伍斩获自治区科创一等奖的协调者</li>
+          <li>✔️ 通过观察和交流，根据成员特点精准分配任务，发挥团队最大效能</li>
+          <li>✔️ 建立清晰的信息传递机制，减少团队内耗</li>
+          <li>✔️ 始终聚焦最终目标，灵活调整策略</li>
         </ul>
       </div>
     </div>
